# the-brownfield-cartographer

./: .env.example  README.md  RECONNAISSANCE.md  pyproject.toml  visualize.html
.cartography/: analysis_summary.json  lineage_graph.json  module_graph.json
.cartography/jaffle-shop-classic/: CODEBASE.md  analysis_summary.json  cartography_trace.jsonl  module_graph.json  onboarding_brief.md  state.json
.cartography/jaffle_shop/: CODEBASE.md  analysis_summary.json  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md  state.json
docs/: FINAL_REPORT.md  interim_report.md
src/: __init__.py  cli.py  orchestrator.py
src/agents/: __init__.py  archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: __init__.py  dag_config_parser.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: __init__.py  knowledge_graph.py
src/models/: __init__.py  schemas.py
tests/: test_hydrologist.py  test_semanticist.py
